# rust-okf

./: Cargo.toml  README.md  RELEASE.md
.github/workflows/: ci.yml  release.yml
benches/: operations.rs
src/: api.rs  bm25.rs  config.rs  embedding.rs  index.rs  lib.rs  main.rs  okf.rs  openapi.rs  query.rs  schema.rs  storage.rs
tests/: api_tests.rs  cli_tests.rs  index_tests.rs
