[package]
name = "rust-okf"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_okf"
path = "src/lib.rs"

[[bin]]
name = "rust-okf"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
http = "1"
fastembed = "5"
utoipa = { version = "5", features = ["axum_extras"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }
